# boon-rust

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  prompter.json
crates/boon_backend_app_window/: Cargo.toml
crates/boon_backend_app_window/src/: lib.rs
crates/boon_backend_browser/: Cargo.toml
crates/boon_backend_browser/src/: lib.rs
crates/boon_backend_ratatui/: Cargo.toml
crates/boon_backend_ratatui/src/: lib.rs
crates/boon_backend_wgpu/: Cargo.toml
crates/boon_backend_wgpu/src/: lib.rs
crates/boon_browser_runner/: Cargo.toml
crates/boon_browser_runner/src/: lib.rs
crates/boon_codegen_rust/: Cargo.toml
crates/boon_codegen_rust/src/: example_runtime_template.rs  lib.rs
crates/boon_compiler/: Cargo.toml
crates/boon_compiler/src/: lib.rs
crates/boon_compiler/tests/: source_fixtures.rs
crates/boon_examples/: Cargo.toml  build.rs
crates/boon_examples/src/: lib.rs
crates/boon_examples/tests/: source_runtime.rs
crates/boon_hir/: Cargo.toml
crates/boon_hir/src/: lib.rs
crates/boon_host_schema/: Cargo.toml
crates/boon_host_schema/src/: lib.rs
crates/boon_render_ir/: Cargo.toml
crates/boon_render_ir/src/: lib.rs
crates/boon_runtime/: Cargo.toml
crates/boon_runtime/src/: compiled_app.rs  lib.rs
crates/boon_runtime/tests/: generic_exec.rs
crates/boon_shape/: Cargo.toml
crates/boon_shape/src/: lib.rs
crates/boon_source/: Cargo.toml
crates/boon_source/src/: lib.rs
crates/boon_stdlib/: Cargo.toml
crates/boon_stdlib/src/: lib.rs
crates/boon_syntax/: Cargo.toml
crates/boon_syntax/src/: lib.rs
crates/boon_verify/: Cargo.toml
crates/boon_verify/firefox_extension/: background.js  content.js  manifest.json  page_bridge.js
crates/boon_verify/src/: lib.rs
crates/boon_verify/tests/: boon_powered_gate.rs  ratatui_gate.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/plans/: boon_powered_migration_plan.md  generic_boon_language_plan.md  native_gui_playground_plan.md  pure_boon_stdlib_migration_plan.md
examples/: manifest.json
examples/arkanoid/: expected.app_ir.json  expected.executable_ir.json  expected.hir.json  expected.program.json  expected.source_inventory.json  source.bn
examples/cells/: expected.app_ir.json  expected.executable_ir.json  expected.hir.json  expected.program.json  expected.source_inventory.json  source.bn
examples/counter/: expected.app_ir.json  expected.executable_ir.json  expected.hir.json  expected.program.json  expected.source_inventory.json  source.bn
examples/counter_hold/: expected.app_ir.json  expected.hir.json  expected.program.json  source.bn
examples/interval/: expected.app_ir.json  expected.hir.json  expected.program.json  source.bn
examples/interval_hold/: expected.app_ir.json  expected.executable_ir.json  expected.hir.json  expected.program.json  expected.source_inventory.json
examples/pong/: expected.app_ir.json  expected.executable_ir.json  expected.hir.json  expected.program.json  source.bn
examples/todo_mvc/: expected.app_ir.json  expected.executable_ir.json  expected.hir.json  expected.program.json  expected.source_inventory.json  expected.visual.json  source.bn
examples/todo_mvc_physical/: expected.app_ir.json  expected.executable_ir.json  expected.hir.json  expected.program.json  expected.source_inventory.json  source.bn
shaders/common/: fullscreen.wesl  palette.wesl
shaders/pipelines/: grid.wesl  physical_debug.wesl  present.wesl  ui_rects.wesl  ui_text.wesl
