[package]
name = "boon_backend_app_window"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
app_window.workspace = true
boon_backend_wgpu = { path = "../boon_backend_wgpu" }
glyphon.workspace = true
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
wgpu.workspace = true
