[package]
name = "boon_codegen_rust"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
boon_compiler = { path = "../boon_compiler" }
boon_shape = { path = "../boon_shape" }
boon_source = { path = "../boon_source" }
serde_json.workspace = true
