[package]
name = "boon_compiler"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
boon_host_schema = { path = "../boon_host_schema" }
boon_hir = { path = "../boon_hir" }
boon_shape = { path = "../boon_shape" }
boon_source = { path = "../boon_source" }
boon_syntax = { path = "../boon_syntax" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
