[package]
name = "boon_examples"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
boon_compiler = { path = "../boon_compiler" }
boon_render_ir = { path = "../boon_render_ir" }
boon_runtime = { path = "../boon_runtime" }
boon_shape = { path = "../boon_shape" }
boon_source = { path = "../boon_source" }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
anyhow.workspace = true
boon_codegen_rust = { path = "../boon_codegen_rust" }
serde_json.workspace = true
