[package]
name = "boon_runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
boon_compiler = { path = "../boon_compiler" }
boon_render_ir = { path = "../boon_render_ir" }
boon_shape = { path = "../boon_shape" }
boon_source = { path = "../boon_source" }
boon_stdlib = { path = "../boon_stdlib" }
serde.workspace = true
serde_json.workspace = true
slotmap.workspace = true
